<resources>
    <string name="app_name">eventspot</string>
    <string name="welcome">Spot an Event near you!</string>
    <string name="entryfield">Enter something here!</string>
    <string name="ButtonText">Click me!</string>
    <string name="title_activity_side_menu">SideMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="submit_an_event_here">Submit an event here!</string>

    <string name="to_map">Open Map</string>
    <string name="title_activity_maps">Map</string>
        <!--
        TODO: Before you run your application, you need a Google Maps API key.

        To get one, follow this link, follow the directions and press "Create" at the end:

        https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=FE:ED:95:66:90:50:29:15:95:85:88:64:D2:DE:4B:04:F5:05:2B:01:1A%3Bcom.thememeteam.eventspot

        You can also add your credentials to an existing key, using this line:
        ED:95:66:90:50:29:15:95:85:88:64:D2:DE:4B:04:F5:05:2B:01:1A;com.thememeteam.eventspot

        Alternatively, follow the directions here:
        https://developers.google.com/maps/documentation/android/start#get-key

        Once you have your key (it starts with "AIza"), replace the "google_maps_key"
        string in this file.
        -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
         AIzaSyCyTriprOfjeF85CLtUnp7NZwUmDfwvpzI
    </string>

    <string name="Create_app">Create your own event!</string>
    <string name="NameOfEvent">Name of the Event</string>
    <string name="Description">Description</string>
    <string name="Datetime">Date and Time</string>
    <string name="pick_time">Pick a Time</string>
    <string name="pick_date">Pick a Date</string>
    <string name="button2">Party</string>
    <string name="button3">Concert</string>
    <string name="button4">Sports</string>
    <string name="button5">Seminar</string>
    <string name="EventType">Type of Event</string>
    <string name="button">Submit Event</string>
    <string name="address">Address</string>
    <string name="button1">ok</string>

</resources>
