<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_eventspot"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:background="@drawable/borders"
        android:ems="9"
        android:id="@+id/editText"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#000000"/>

    <TextView
        android:textStyle="bold"
        android:fontFamily="serif"
        android:text="@string/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text|textMultiLine"
        android:background="@drawable/borders"
        android:ems="9"
        android:id="@+id/editText4"
        tools:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#000000"/>

    <TextView
        android:textStyle="bold"
        android:fontFamily="serif"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:text="@string/NameOfEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/textView2"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        android:id="@+id/button1"
        android:onClick="showDatePickerDialog"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_time"
        android:id="@+id/button"
        android:onClick="showTimePickerDialog"
        android:layout_below="@+id/textView14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:onClick="geoLocate"
        android:layout_below="@+id/radiogroup9"
        android:layout_alignRight="@+id/textView14"
        android:layout_alignEnd="@+id/textView14" />

    <TextView
        android:text="@string/Datetime"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:layout_below="@+id/editText4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:id="@+id/radiogroup9"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:text="@string/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/party"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:text="@string/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/concert"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:text="@string/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sport"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:text="@string/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seminar"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:text="@string/EventType"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_below="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:background="@drawable/borders"
        android:id="@+id/editText2"
        android:textColor="#000000"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text=" "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/time"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_below="@+id/button" />

    <TextView
        android:text=" "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:layout_below="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_alignEnd="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1" />

    <TextView
        android:text="@string/address"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
</ScrollView>
